# PolySim

./: .dockerignore  .env.development  .env.example  .env.example.development  .env.example.production  .eslintrc.cjs  .gitignore  .prettierignore  Caddyfile  Caddyfile.dev  Dockerfile  Dockerfile.dev  Dockerfile.migrator  README.md  REFACTORING_SUMMARY.md  components.json  docker-compose.database.yaml  docker-compose.development.yaml  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml  eslint.config.mjs  generateSwaggerSpec.mjs  knexfile.js  knexfile.ts  migrator.package.json  next.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  tsconfig.json  vitest.config.ts  vitest.server.config.ts
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci-e2e.yml  docker-publish-polytrace.yml  docker-publish.yml  tracer-ci.yml  website.yml
@types/: knex.d.ts  next-auth.d.ts  nextjs-routes.d.ts  react-vis-graph.d.ts
arc42/: APACHE_AGE.md  arc42.adoc  custom.css  demo_review.html  demo_review.md  reveal-md.json
arc42/diagrams/: README.md  building-blocks.puml  provenance-poc.puml
arc42/src/: 01_introduction_and_goals.adoc  02_architecture_constraints.adoc  03_context_and_scope.adoc  04_solution_strategy.adoc  05_building_block_view.adoc  06_runtime_view.adoc  07_deployment_view.adoc  08_concepts.adoc  09_architecture_decisions.adoc  10_quality_requirements.adoc  11_technical_risks.adoc  12_glossary.adoc
certs/: polysim.crt  polysim.key
docs/: MESSAGING.md  provenance-lineage-queries.md  supabase-routing.md
keycloak/data/: template.json
keycloak/data/devImport/: myRealmDev.json
keycloak/data/import/: docker-entrypoint.sh  initialRealm.json
keycloak/initial/data/: myRealm.json
migrations/: 20250905091949_initial_migration.js  20250905091949_initial_migration.ts  20251001220000_add_skills_assessment_history.js  20251019001441_create_conversations_and_messages_tables.js  20251019003407_add_realtime_triggers_for_messages.js  20251019214555_user_data.js  20251101112000_create_prov_tables.js  20251101124551_user_data_avatar.js  20251101182739_add_personal_access_tokens.js  20260129151646_make_pat_expires_at_not_nullable.js  20260129152000_add_provenance_lineage_functions.js  20260130175706_enable_apache_age.js  20260130175729_create_age_sync_triggers.js  20260131120000_create_graph_query_functions.js
polysim_ctrace/: .clang-tidy  README.md
polysim_ctrace/tests/performance_impact/: generate_report.cpp  plot_overhead.gnuplot
polysim_ctrace/tests/simple/: run_test.sh  (+1 more)
public/: swagger-spec.json
public/benchmarks/: benchmarks.json
scripts/: svg-to-react-icons.cjs  update-database-types.cjs
seeds/: 00_upsert_keycloak_user.js  01_prov_dev_seed.js  01_prov_upload_seed.js  02_polytrace_fixture_seed.js  README.md
seeds/provDevSeedData/: README.md  concurrent_append.json  long_chain_01.json  long_chain_02.json  long_chain_03.json  long_chain_04.json  long_chain_05.json  long_chain_06.json  long_chain_07.json  long_chain_08.json  long_chain_09.json  long_chain_10.json  pipeline.json  simple_run.json
src/: middleware.ts
src/app/: AppProviders.tsx  Footer.tsx  QueryClientProvider.tsx  SessionProviderWrapper.tsx  appRoutes.ts  clientLogger.ts  clientTrpc.ts  globals.css  layout.tsx  page.tsx  pagesIndex.ts
src/components/: data-table-column-header.tsx  mode-toggle.tsx  theme-wrapper.tsx
src/hooks/: useLogger.ts  useRealtimeMessages.ts  useSkillsAssessment.ts  useSkillsAssessmentActions.ts
src/lib/: appRoutes.ts  pageRoutes.ts  supabaseClient.ts  trpc.ts
src/server/: README.md  ageTriggers.test.ts  db.test.ts  db.ts  getServiceToken.ts  logger.ts  patRateLimiter.ts  router.test.ts  router.ts  trpcContext.ts  trpcRoot.ts
src/trpc/: TrcpEndpoint.ts  clientTrpc.ts  trpc.ts
src/types/: age_cypher.ts  db_schemas.ts
src/util/: clientLogger.ts  db.ts  swagger-spec.json  swagger.ts
test/: data.data  forecast.data  mockData.ts  setup.ts  setupTestServer.ts
tests/e2e/: IMPLEMENTATION_NOTES.md  README.md  account-avatar.spec.ts  api-docs.spec.ts  auth.path.ts  auth.setup.ts  auth.spec.ts  skills-assessment.spec.ts
tests/hooks/: useRealtimeMessages.test.tsx
tests/migrations/: 20260201000000_add_dummy_test_function.js
tests/vitest/: setup.ts  setupTestcontainer.ts
tools/: backfill_age_graph.sql  db_types.cjs  plot_benchmarks.py  prov_upload_with_pat.sh  runtime_overhead.csv  svg-to-react-icons.cjs
tools/polysim_ctrace/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  polysim_ctrace.cpp
tools/polysim_ctrace/tests/performance_impact/: run_perf.sh  sim.cpp
tools/polysim_ctrace/tests/simple/: testprog.cpp
tools/polytrace/: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  fs_usage_output_KHefUx.txt  prov_upload_input.json  prov_upload_input_correct.json
tools/polytrace/include/: config.hpp  config_helper.hpp  fs_usage_parser.hpp  fs_usage_parser_lite.hpp  fs_usage_pegtl.hpp  prov_client.hpp  sha256.hpp  strace_parser.hpp  strace_pegtl.hpp  upload_activity.hpp
tools/polytrace/src/: sb.cpp  trace.cpp  tracer_lite.cpp  upload.cpp
tools/polytrace/test/: bench_program.cpp  fs_usage_parser_lite.test.cpp  strace_parser.test.cpp
tools/polytrace/test/benchmarks/: 01_io_datasize_overhead_large.json  01_io_datasize_overhead_medium.json  01_io_datasize_overhead_small.json  01_long_run.json  02_cpu_only_tracing.json  02_io_heavy.json  03_many_small_files.json  04_write_then_read.json  05_mixed_phases.json  06_pure_cpu.json  07_io_scaling_small.json  08_io_scaling_medium.json  09_io_scaling_large.json  README.md  README_benchmarks.md  benchmark_stats.csv  extract_runtime_overhead.py  plot_benchmarks.py  plot_cpu_io_analysis.py  plot_cpu_overhead.py  plot_io_scaling_filesize.py  plot_results.gnuplot  results.csv  run_bench.sh  runtime_overhead.csv
tools/polytrace/test/fixtures/: change_exec_dirs.sh  complex_sysread.sh  concurrent_append.sh  file_ops.sh  fork_exec.sh  hardlink_chmod.sh  pipeline.sh  rename_dirs.sh  simple_run.sh
(+178 files in other folders)
